--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>test</title>
+	<title>我的前端求职简历</title>
     <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
