--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>我的前端求职简历</title>
     <link rel="stylesheet" type="text/css" href="index.css">
+    <script type="text/javascript" src="index.js"></script>
 </head>
 <body>
   <!--The content below is only a placeholder and can be replaced.-->
