--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
        <div class="other-mes">
          <div class="other-mes-header">
             <span class="header-first">2014.09 - 至今</span>
-            <span class="header-first">湖南科技大学</span>
+            <span class="header-middle">湖南科技大学</span>
             <span class="header-last">信息安全</span>
          </div>
           <div class="other-mes-title"><span>主修课程：</span></div>
@@ -65,7 +65,7 @@
        <div class="other-mes">
          <div class="other-mes-header">
             <span class="header-first">2017.06 - 2017.08</span>
-            <span class="header-first">湖南阿茨特网络科技有限公司</span>
+            <span class="header-middle">湖南阿茨特网络科技有限公司</span>
             <span class="header-last">web前端</span>
          </div>
          <div class="practice-steep-content">
@@ -88,7 +88,7 @@
        <div class="other-mes">
          <div class="other-mes-header">
             <span class="header-first">2016.03-2016.03</span>
-            <span class="header-first">湖南科技大学逸夫楼</span>
+            <span class="header-middle">湖南科技大学逸夫楼</span>
             <span class="header-last">web前端兼后台</span>
          </div>
          <div class="practice-steep-content">
@@ -102,7 +102,7 @@
         <div class="other-mes">
           <div class="other-mes-header">
             <span class="header-first">2016.09-2017.09</span>
-            <span class="header-first">湖南科技大学逸夫楼</span>
+            <span class="header-middle">湖南科技大学逸夫楼</span>
             <span class="header-last">web前端兼后台</span>
           </div>
           <div class="practice-steep-content">
@@ -116,7 +116,7 @@
         <div class="other-mes">
           <div class="other-mes-header">
             <span class="header-first">2017.05-2017.05</span>
-            <span class="header-first">湖南科技大学逸夫楼</span>
+            <span class="header-middle">湖南科技大学逸夫楼</span>
             <span class="header-last">web前端兼后台</span>
           </div>
           <div class="practice-steep-content">
