--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
 	<title>我的前端求职简历</title>
     <link rel="stylesheet" type="text/css" href="index.css">
     <script type="text/javascript" src="index.js"></script>
@@ -13,8 +14,8 @@
       <span id="first-title">我的简历</span><span id="last-title">my cv</span>
     </div>
     <div id="cut-line">
-      <div id="cut-line-left"></div>
-      <div id="cut-line-right"></div>
+      <span id="cut-line-left"></span>
+      <span id="cut-line-right"></span>
     </div>
     <div class="person-mes">
        <h4 class="mes-title">
@@ -41,7 +42,7 @@
     </div>
     <div class="person-mes">
        <h4 class="mes-title">
-        <img src="images/eduction.png"/>
+        
         <span>教育背景（Eduction）</span>
        </h4>
        <div class="other-mes">
@@ -171,7 +172,7 @@
     <div class="blog">
       <span>技术博客：</span><span><a href="http://blog.csdn.net/theoneemperor?viewmode=list">http://blog.csdn.net/theoneemperor?viewmode=list</a> </span>
     </div>
-    <div class="blog">
+    <div class="blog" id="footer">
       本简历pc端，手机端兼容
     </div>
   </div>
