--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
     <div class="person-mes">
        <h4 class="mes-title">
-        
+        <img src="images/eduction.png">
         <span>教育背景（Eduction）</span>
        </h4>
        <div class="other-mes">
