--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
            <li><span>学 历：</span><span>本科</span></li>
          </ul> 
          <div id="photo">
-           <img src="images/photo.png"/>
+           <img src="images/photo.jpeg"/>
          </div>
        </div>
     </div>
@@ -176,6 +176,6 @@
       本简历pc端，手机端兼容
     </div>
   </div>
-
+</div>
 </body>
 </html>
