--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-  <!--The content below is only a placeholder and can be replaced.-->
-
   <div id="content">
     <div id="title">
       <span id="first-title">我的简历</span><span id="last-title">my cv</span>
@@ -71,7 +69,7 @@
            <ul class="practice-steep">
              <li>项目大体为微信网上商城开发，主要由两人负责，我负责所有前端页面的呈现；</li>
              <li>主要用到的是vue.js框架，vue-cli脚手架，webpack打包工具，以及git，github。</li>
-             <li>主要模块：商品列表展示页，商品详情页，购物车页，订单支付页，个人中心，收货地址管理，物流详情，订单的四种状态（未支付，已支付，待收货，已收货）后台管理及其相关功能。</li>
+             <li>主要模块：商品列表展示页，商品详情页，购物车页，订单支付页，个人中心，收货地址管理，物流详情，订单的四种状态（未支付，已支付，待收货，已收货），后台管理及其相关功能。</li>
              <li>主要用到的插件：vue-area（地址省市区选择插件），echarts（后台销量数据的折线或圆柱图展示），vue-toast（用户操作的提示），上拉刷新下拉加载，轮播图等，以及一些特定要求自己编写的插件。</li>
              <li>由于团队给力，气氛活跃，总的来说开发十分顺利，提前完成了任务</li>
              <li>项目展示地址：<a href="http://xnd.cg0.me/">http://xnd.cg0.me/</a> </li>
@@ -93,7 +91,7 @@
          <div class="practice-steep-content">
            <ul class="practice-steep">
              <li>项目大体为一个完全仿qq的web实时聊天网页app</li>
-             <li>主要用到的知识有html，css，js，jq，ajax，php，mysql以及wamp（window，Apache，mysql，php）这款集成软件。</li>
+             <li>主要用到的知识有:基本知识，jq，php，mysql以及wampserve。</li>
              <li>主要模块：登录注册模块，会话列表，好友列表，以及空间客户端。</li>
              <li>原理：通过不断的向数据库轮询取数据的方式来模拟在线聊天，后来通过websocket技术进行了改进（三次握手进行双向通信）。</li>
            </ul>
@@ -107,7 +105,7 @@
           <div class="practice-steep-content">
            <ul class="practice-steep">
              <li>项目为一个员工工资管理系统</li>
-             <li>主要用到的知识有html，css，js，jq，ajax，php，mysql以及wamp（window，Apache，mysql，php）这款集成软件。</li>
+             <li>主要用到的知识有:基本知识，jq，php，mysql以及wampserve。</li>
              <li>主要模块：登录注册模块，各级员工工资标准详情，奖罚记录，最终应得工资。</li>
            </ul>
           </div>
@@ -121,7 +119,7 @@
           <div class="practice-steep-content">
            <ul class="practice-steep">
              <li>项目大体为一个旅游攻略网站</li>
-             <li>主要用到的知识有html，css，js，jq，ajax，php，mysql以及wamp（window，Apache，mysql，php）这款集成软件。</li>
+             <li>主要用到的知识有：基本知识，jq，php，mysql以及wampserve。</li>
              <li>主要模块：登录注册模块，管理员发布文章，文章列表，用户查阅文章以及点评。</li>
              <li>特点：登录注册以及管理员登录三个页面采用了3D翻转效果</li>
            </ul>
@@ -137,10 +135,10 @@
          <div class="practice-steep-content">
            <ul>
              <li>
-               熟练掌握: html，css，html5，css3，javascript，jquery，vue，ajax以及ES6语法。
+               熟练掌握: 基本知识，jquery以及vue。
              </li>
              <li>
-               精通: php，sass，bootstrap，git，github，mysql，webpack，以及node.js的npm包管理，react，angular
+               精通: php，bootstrap，ES6语法，git以及webpack这两工具。
              </li>
            </ul>
        </div>
