--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
          <div class="other-mes-title"><span>专业评价：</span></div>
          <div>
            <p>
+             从大一下学期开始接触前端，也没大牛带，从w3c网，到红皮书，再到现在一只菜鸟，一路摸爬滚打，坐井观天时，就偷偷去翻别人的博客，贴吧，看下大神们的学习历程。我希望能有个温暖的前端大家庭收留。
              有良好的编码风格，能编写高质量代码，能解决浏览器兼容问题，能编写移动端适配代码，能很好的利用前端各类框架。
            </p>
          </div>
