--- a/index.html
+++ b/index.html
@@ -149,21 +149,20 @@
         <span>自我评价（Self-assessment）</span>
        </h4>
        <div class="other-mes">
-         <div class="other-mes-title"><span>专业评价：</span></div>
-         <div>
-           <p>
+        <div class="other-mes-title"><span>前端经历：</span></div>
+          <p>
              从大一下学期开始接触前端，也没大牛带，从w3c网，到红皮书，再到现在一只菜鸟，一路摸爬滚打，坐井观天时，就偷偷去翻别人的博客，贴吧，看下大神们的学习历程。我希望能有个温暖的前端大家庭收留。
+           </p>
+         <div class="other-mes-title"><span>专业评价：</span></div>
+           <p>
              有良好的编码风格，能编写高质量代码，能解决浏览器兼容问题，能编写移动端适配代码，能很好的利用前端各类框架。
            </p>
-         </div>
          <div class="other-mes-title1"><span>其他评价：</span></div>
-         <div>
            <p>
              具有良好的数学和计算机基础知识，较强的数理分析、逻辑推理和再学习能力。
              自学能力强，解决问题效率高。
              积极进取，勇于挑战，为人热情可靠，工作勤奋刻苦，有出色的团队意识，抗压能力和强烈的责任感。
            </p>
-         </div>
        </div>
     
     <div class="blog">
