--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
            <li><span>学 历：</span><span>本科</span></li>
          </ul> 
          <div id="photo">
-           <img src="images/photo.jpeg"/>
+           <img src="images/psb.jpg"/>
          </div>
        </div>
  
@@ -135,10 +135,10 @@
          <div class="practice-steep-content">
            <ul>
              <li>
-               熟练掌握: 基本知识，jquery以及vue。
+               熟练掌握: 基本知识，vue等一些前端框架。
              </li>
              <li>
-               精通: php，bootstrap，ES6语法，git以及webpack这两工具。
+               了解: php，bootstrap，ES6语法，git以及webpack这两工具。
              </li>
            </ul>
        </div>
