--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-	<title>我的前端求职简历</title>
+	<title>web前端+肖鹏飞+湖南科技大学</title>
     <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
@@ -91,7 +91,7 @@
          <div class="practice-steep-content">
            <ul class="practice-steep">
              <li>项目大体为一个完全仿qq的web实时聊天网页app</li>
-             <li>主要用到的知识有:基本知识，jq，php，mysql以及wampserve。</li>
+             <li>主要用到的知识有:基本知识，jq，php，简易mysql以及wampserve。</li>
              <li>主要模块：登录注册模块，会话列表，好友列表，以及空间客户端。</li>
              <li>原理：通过不断的向数据库轮询取数据的方式来模拟在线聊天，后来通过websocket技术进行了改进（三次握手进行双向通信）。</li>
            </ul>
@@ -105,7 +105,7 @@
           <div class="practice-steep-content">
            <ul class="practice-steep">
              <li>项目为一个员工工资管理系统</li>
-             <li>主要用到的知识有:基本知识，jq，php，mysql以及wampserve。</li>
+             <li>主要用到的知识有:基本知识，jq，php，简易mysql以及wampserve。</li>
              <li>主要模块：登录注册模块，各级员工工资标准详情，奖罚记录，最终应得工资。</li>
            </ul>
           </div>
@@ -119,7 +119,7 @@
           <div class="practice-steep-content">
            <ul class="practice-steep">
              <li>项目大体为一个旅游攻略网站</li>
-             <li>主要用到的知识有：基本知识，jq，php，mysql以及wampserve。</li>
+             <li>主要用到的知识有：基本知识，jq，php，简易mysql以及wampserve。</li>
              <li>主要模块：登录注册模块，管理员发布文章，文章列表，用户查阅文章以及点评。</li>
              <li>特点：登录注册以及管理员登录三个页面采用了3D翻转效果</li>
            </ul>
