--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
            <li><span>学 历：</span><span>本科</span></li>
          </ul> 
          <div id="photo">
-           <img src="images/psb.jpg"/>
+           <img src="images/tx.jpg"/>
          </div>
        </div>
  
