--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
          <div class="practice-steep-content">
            <ul>
              <li>
-               熟练掌握: 基本知识，vue等一些前端框架。
+               熟练掌握: 基本知识（html,css,js），vue等一些前端框架。
              </li>
              <li>
                了解: php，bootstrap，ES6语法，git以及webpack这两工具。
