--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
              <li>主要模块：商品列表展示页，商品详情页，购物车页，订单支付页，个人中心，收货地址管理，物流详情，订单的四种状态（未支付，已支付，待收货，已收货），后台管理及其相关功能。</li>
              <li>主要用到的插件：vue-area（地址省市区选择插件），echarts（后台销量数据的折线或圆柱图展示），vue-toast（用户操作的提示），上拉刷新下拉加载，轮播图等，以及一些特定要求自己编写的插件。</li>
              <li>由于团队给力，气氛活跃，总的来说开发十分顺利，提前完成了任务</li>
-             <li>项目展示地址：<a href="http://xnd.cg0.me/">http://xnd.cg0.me/</a> </li>
+             <li>项目展示地址：<a href="http://greennesstime.com/">http://greennesstime.com/</a>,或者微信关注‘鲜农达’ </li>
            </ul>
         </div>
        </div>
