--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
              <li>主要模块：商品列表展示页，商品详情页，购物车页，订单支付页，个人中心，收货地址管理，物流详情，订单的四种状态（未支付，已支付，待收货，已收货），后台管理及其相关功能。</li>
              <li>主要用到的插件：vue-area（地址省市区选择插件），echarts（后台销量数据的折线或圆柱图展示），vue-toast（用户操作的提示），上拉刷新下拉加载，轮播图等，以及一些特定要求自己编写的插件。</li>
              <li>由于团队给力，气氛活跃，总的来说开发十分顺利，提前完成了任务</li>
-             <li>项目展示地址：<a href="http://greennesstime.com/">http://greennesstime.com/</a>,或者微信关注‘鲜农达’ </li>
            </ul>
         </div>
        </div>
@@ -84,10 +83,10 @@
          </div>
          <div class="practice-steep-content">
            <ul class="practice-steep">
-             <li>主要参与一些PC端系统的开发</li>
+             <li>主要参与一些PC端系统的开发。</li>
              <li>在此期间，是非常快上手项目的实习生，也分担了大型系统构建的任务。</li>
              <li>主要负责方面：开发前期配置文件的编写，界面的构建，大型文件树结构的构建（如：多级文件树的增删改查，以及预览上传等），参与过界面的调整讨论，JQ框架Easyui的使用，以及修改他人代码的BUG等。</li>
-             <li>实习空余期间，也开始补充新的知识，如node</li>
+             <li>实习空余期间，也开始补充新的知识，如node等。</li>
            </ul>
         </div>
        </div>
@@ -99,12 +98,11 @@
          </div>
          <div class="practice-steep-content">
            <ul class="practice-steep">
-             <li>在闲暇期间，把之前对Node的向往之情，得到了实现，由于刚入坑这方面，app做的还比较粗糙，差不多就是搭通了下前后端，后期会进行功能的完善</li>
-             <li>类似于论坛的app</li>
+             <li>在闲暇期间，把之前对Node的向往之情，得到了实现，由于刚入坑这方面，app做的还比较粗糙，差不多就是搭通了下前后端，后期会进行功能的完善。</li>
+             <li>类似于论坛的app。</li>
              <li>主要用了：vue，nodejs，nginx，mongodb等。(还有待后期更加深入的学习与实践)</li>
-             <li>主要步骤：前期的分析和构建，比较喜欢这种前后端分离的开发模式。服务器的搭建。云服务器环境的配置。网站的部署。一些插件的使用（由于服务器比较便宜，表情包插件会导致非常卡顿，只能舍弃了）</li>
-             <li>感受：爬坑之旅，异常艰难，反而激起了我的斗志和想丰富全面它的心</li>
-             <li>项目展示地址：<a href="http://180.76.53.224/">http://180.76.53.224/</a>(请用移动端或者打开电脑浏览器里手机模拟器预览)</li>
+             <li>主要步骤：前期的分析和构建，本地服务器的搭建，云服务器环境的配置，网站的部署。</li>
+             <li>感受：爬坑之旅，异常艰难，一个问题可以怼得你怀疑人生，不过反而激起了我的斗志。</li>
            </ul>
         </div>
        </div>
@@ -114,19 +112,39 @@
        </h4>
        <div class="other-mes">
          <div class="other-mes-header">
-            <span class="header-first">2016.03-2016.03</span>
+            <span class="header-first">2016.03 - 2016.03</span>
             <span class="header-middle">湖南科技大学逸夫楼</span>
             <span class="header-last">web前端兼后台</span>
          </div>
          <div class="practice-steep-content">
            <ul class="practice-steep">
-             <li>项目大体为一个完全仿qq的web实时聊天网页app</li>
+             <li>项目大体为一个完全仿qq的web实时聊天网页app。</li>
              <li>主要用到的知识有:基本知识，jq，php，简易mysql以及wampserve。</li>
              <li>主要模块：登录注册模块，会话列表，好友列表，以及空间客户端。</li>
              <li>原理：通过不断的向数据库轮询取数据的方式来模拟在线聊天，后来通过websocket技术进行了改进（三次握手进行双向通信）。</li>
-             <li>等等，一系列有趣的小玩意开发，极大的激起了我对开发的兴趣。（之前没玩github，电脑有次硬盘坏了，所以无法展示了）</li>
            </ul>
-        </div>   
+        </div>
+        <h4 class="mes-title company-title">
+          <img src="images/company.png"/>
+          <span>工作经历（Company）</span>
+        </h4>
+        <div class="other-mes">
+          <div class="other-mes-header">
+             <span class="header-first">2018.06 - 2019.10</span>
+             <span class="header-middle">万汇互联科技有限公司</span>
+             <span class="header-last">web前端开发工程师</span>
+          </div>
+          <div class="practice-steep-content">
+            <ul class="practice-steep">
+              <li>主要从事原生h5混合项目开发，负责h5与原生的对接与优化工作。</li>
+              <li>具体包括开发移动端各h5页面，与原生对接联调交互。根据移动端实际情况，对现有服务端渲染逻辑进行改造优化，
+                提升页面响应速度以及用户体验。实验现有缓存技术对资源加载进行优化。利用vue的相关特性，进行插件开发，项目重构。
+              </li>
+              <li>利用相关框架，开发与现有业务相关联的一套代码多端小程序（微信小程序）。</li>
+              <li>升级和改造现有pc主站老项目，vue项目业务组件化，typescript化，使之向后兼容，也便于开发管理，状态管理类化等项目改造。</li>
+              <li>对于小工程模块，也会编写一些node端接口，自行对接前端。</li>
+            </ul>
+         </div> 
        <h4 class="mes-title">
         <img id="cursorily" src="images/cursorily.png"/>
         <span>前端涉猎（Cursorily）</span>
@@ -135,15 +153,10 @@
          <div class="practice-steep-content">
            <ul>
              <li>
-               熟练掌握: 基本知识（html,css,js），JQ，vue等一些前端框架。
-             </li>
-             <li>
-               了解: node.js，php，bootstrap，ES6语法，git以及webpack这两工具。
+               范围: 基本知识（html,css,js），JQ，vue，vue-ssr，typescript，react，微信小程序，node.js，git，webpack，rollup等。
              </li>
            </ul>
        </div>
- 
-   
        <h4 class="mes-title">
         <img src="images/self.png"/>
         <span>自我评价（Self-assessment）</span>
@@ -168,10 +181,10 @@
     <div class="blog">
       <span>技术博客：</span><span><a href="http://blog.csdn.net/theoneemperor?viewmode=list">http://blog.csdn.net/theoneemperor?viewmode=list</a> </span>
     </div>
-    <div class="blog" id="footer">
+    <div class="blog" class="footer">
       <span>简历在线浏览：</span><span><a href="https://vitaminaq.github.io/my-cv">https://vitaminaq.github.io/my-cv</a> </span>
     </div>
-    <div class="blog" id="footer">
+    <div class="blog" class="footer">
       本简历pc端，手机端兼容
     </div>
   </div>
