--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
            <li><span>政治面貌：</span><span>中共团员</span></li>
            <li class="mes-left"><span>邮 箱：</span><span>1109614355@qq.com</span></li>
            <li><span>毕业学校：</span><span>湖南科技大学</span></li>
-           <li class="mes-left"><span>住 址：</span><span>湖南省湘潭市雨湖区</span></li>
+           <li class="mes-left"><span>住 址：</span><span>广东省深圳市宝安区</span></li>
            <li><span>学 历：</span><span>本科</span></li>
          </ul> 
          <div id="photo">
@@ -177,7 +177,9 @@
              积极进取，勇于挑战，为人热情可靠，工作勤奋刻苦，有出色的团队意识，抗压能力和强烈的责任感。
            </p>
        </div>
-    
+    <div class="blog">
+      <span>github：</span><span><a href="https://github.com/Vitaminaq">https://github.com/Vitaminaq</a> </span>
+    </div>
     <div class="blog">
       <span>技术博客：</span><span><a href="http://blog.csdn.net/theoneemperor?viewmode=list">http://blog.csdn.net/theoneemperor?viewmode=list</a> </span>
     </div>
