feat: 修改大学时间
修改大学时间

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
        </h4>
        <div class="other-mes">
          <div class="other-mes-header">
-            <span class="header-first">2014.09 - 至今</span>
+            <span class="header-first">2014.09 - 2018.06</span>
             <span class="header-middle">湖南科技大学</span>
             <span class="header-last">信息安全</span>
          </div>
