feat: 补充工作内容
补充工作内容

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
-	<title>web前端+肖鹏飞+湖南科技大学</title>
-    <link rel="stylesheet" type="text/css" href="index.css">
+  <title>web前端+肖鹏飞+湖南科技大学</title>
+  <link rel="stylesheet" type="text/css" href="index.css">
 </head>
+
 <body>
   <div id="content">
     <div id="title">
@@ -15,124 +17,125 @@
       <span id="cut-line-right"></span>
     </div>
     <div class="person-mes">
-       <h4 class="mes-title">
-        <img src="images/person.png"/>
+      <h4 class="mes-title">
+        <img src="images/person.png" />
         <span>个人信息（Personal Info）</span>
-       </h4>
-       <div class="mes-detail">
-         <ul>
-           <li class="mes-left"><span>姓 名：</span><span>肖鹏飞</span></li>
-           <li><span>出生年月：</span><span>1996.03</span></li>
-           <li class="mes-left"><span>民 族：</span><span>汉</span></li>
-           <li><span>身 高：</span><span>172cm</span></li>
-           <li class="mes-left"><span>电 话：</span><span>13638422132</span></li>
-           <li><span>政治面貌：</span><span>中共团员</span></li>
-           <li class="mes-left"><span>邮 箱：</span><span>1109614355@qq.com</span></li>
-           <li><span>毕业学校：</span><span>湖南科技大学</span></li>
-           <li class="mes-left"><span>住 址：</span><span>广东省深圳市宝安区</span></li>
-           <li><span>学 历：</span><span>本科</span></li>
-         </ul> 
-         <div id="photo">
-           <img src="images/tx.jpg"/>
-         </div>
-       </div>
- 
-       <h4 class="mes-title">
+      </h4>
+      <div class="mes-detail">
+        <ul>
+          <li class="mes-left"><span>姓 名：</span><span>肖鹏飞</span></li>
+          <li><span>出生年月：</span><span>1996.03</span></li>
+          <li class="mes-left"><span>民 族：</span><span>汉</span></li>
+          <li><span>身 高：</span><span>172cm</span></li>
+          <li class="mes-left"><span>电 话：</span><span>13638422132</span></li>
+          <li><span>政治面貌：</span><span>中共团员</span></li>
+          <li class="mes-left"><span>邮 箱：</span><span>1109614355@qq.com</span></li>
+          <li><span>毕业学校：</span><span>湖南科技大学</span></li>
+          <li class="mes-left"><span>住 址：</span><span>广东省深圳市宝安区</span></li>
+          <li><span>学 历：</span><span>本科</span></li>
+          <li class="mes-left"><span>工作经验：</span><span>一年半</span></li>
+        </ul>
+        <div id="photo">
+          <img src="images/tx.jpg" />
+        </div>
+      </div>
+
+      <h4 class="mes-title">
         <img src="images/eduction.png">
         <span>教育背景（Eduction）</span>
-       </h4>
-       <div class="other-mes">
-         <div class="other-mes-header">
-            <span class="header-first">2014.09 - 2018.06</span>
-            <span class="header-middle">湖南科技大学</span>
-            <span class="header-last">信息安全</span>
-         </div>
-          <div class="other-mes-title"><span>主修课程：</span></div>
-         <div>
-           <p>
-             主修c语言，面向对象编程c++，java，安卓开发，操作系统，数据库，计算机网络，数据结构，软件工程，软件测试，Internet web等。
-           </p>
-       </div>
-    </div>
-  
-       <h4 class="mes-title">
-         <img src="images/prac.png"/>
-         <span>实习经历（Intership）</span>
-       </h4>
-       <div class="other-mes">
-         <div class="other-mes-header">
+      </h4>
+      <div class="other-mes">
+        <div class="other-mes-header">
+          <span class="header-first">2014.09 - 2018.06</span>
+          <span class="header-middle">湖南科技大学</span>
+          <span class="header-last">信息安全</span>
+        </div>
+        <div class="other-mes-title"><span>主修课程：</span></div>
+        <div>
+          <p>
+            主修c语言，面向对象编程c++，java，安卓开发，操作系统，数据库，计算机网络，数据结构，软件工程，软件测试，Internet web等。
+          </p>
+        </div>
+      </div>
+      <h4 class="mes-title">
+        <img src="images/campus.png" />
+        <span>校内项目（Campus）</span>
+      </h4>
+      <div class="other-mes">
+        <div class="other-mes-header">
+          <span class="header-first">2016.03 - 2016.03</span>
+          <span class="header-middle">湖南科技大学逸夫楼</span>
+          <span class="header-last">web前端兼后台</span>
+        </div>
+        <div class="practice-steep-content">
+          <ul class="practice-steep">
+            <li>项目大体为一个完全仿qq的web实时聊天网页app。</li>
+            <li>主要用到的知识有:基本知识，jq，php，简易mysql以及wampserve。</li>
+            <li>主要模块：登录注册模块，会话列表，好友列表，以及空间客户端。</li>
+            <li>原理：通过不断的向数据库轮询取数据的方式来模拟在线聊天，后来通过websocket技术进行了改进（三次握手进行双向通信）。</li>
+          </ul>
+        </div>
+        <h4 class="mes-title">
+          <img src="images/prac.png" />
+          <span>实习经历（Intership）</span>
+        </h4>
+        <div class="other-mes">
+          <div class="other-mes-header">
             <span class="header-first">2017.06 - 2017.08</span>
             <span class="header-middle">湖南阿茨特网络科技有限公司</span>
             <span class="header-last">web前端</span>
-         </div>
-         <div class="practice-steep-content">
-           <ul class="practice-steep">
-             <li>项目大体为微信网上商城开发，主要由两人负责，我负责所有前端页面的呈现；</li>
-             <li>主要用到的是vue.js框架，vue-cli脚手架，webpack打包工具，以及git，github。</li>
-             <li>主要模块：商品列表展示页，商品详情页，购物车页，订单支付页，个人中心，收货地址管理，物流详情，订单的四种状态（未支付，已支付，待收货，已收货），后台管理及其相关功能。</li>
-             <li>主要用到的插件：vue-area（地址省市区选择插件），echarts（后台销量数据的折线或圆柱图展示），vue-toast（用户操作的提示），上拉刷新下拉加载，轮播图等，以及一些特定要求自己编写的插件。</li>
-             <li>由于团队给力，气氛活跃，总的来说开发十分顺利，提前完成了任务</li>
-           </ul>
+          </div>
+          <div class="practice-steep-content">
+            <ul class="practice-steep">
+              <li>项目大体为微信网上商城开发，主要由两人负责，我负责所有前端页面的呈现；</li>
+              <li>主要用到的是vue.js框架，vue-cli脚手架，webpack打包工具，以及git，github。</li>
+              <li>主要模块：商品列表展示页，商品详情页，购物车页，订单支付页，个人中心，收货地址管理，物流详情，订单的四种状态（未支付，已支付，待收货，已收货），后台管理及其相关功能。</li>
+              <li>主要用到的插件：vue-area（地址省市区选择插件），echarts（后台销量数据的折线或圆柱图展示），vue-toast（用户操作的提示），上拉刷新下拉加载，轮播图等，以及一些特定要求自己编写的插件。
+              </li>
+              <li>由于团队给力，气氛活跃，总的来说开发十分顺利，提前完成了任务</li>
+            </ul>
+          </div>
         </div>
-       </div>
-       <div class="other-mes">
-         <div class="other-mes-header">
+        <div class="other-mes">
+          <div class="other-mes-header">
             <span class="header-first">2017.11 - 2018.03</span>
             <span class="header-middle">湖北金拓维信息技术有限公司</span>
             <span class="header-last">web前端</span>
-         </div>
-         <div class="practice-steep-content">
-           <ul class="practice-steep">
-             <li>主要参与一些PC端系统的开发。</li>
-             <li>在此期间，是非常快上手项目的实习生，也分担了大型系统构建的任务。</li>
-             <li>主要负责方面：开发前期配置文件的编写，界面的构建，大型文件树结构的构建（如：多级文件树的增删改查，以及预览上传等），参与过界面的调整讨论，JQ框架Easyui的使用，以及修改他人代码的BUG等。</li>
-             <li>实习空余期间，也开始补充新的知识，如node等。</li>
-           </ul>
+          </div>
+          <div class="practice-steep-content">
+            <ul class="practice-steep">
+              <li>主要参与一些PC端系统的开发。</li>
+              <li>在此期间，是非常快上手项目的实习生，也分担了大型系统构建的任务。</li>
+              <li>主要负责方面：开发前期配置文件的编写，界面的构建，大型文件树结构的构建（如：多级文件树的增删改查，以及预览上传等），参与过界面的调整讨论，JQ框架Easyui的使用，以及修改他人代码的BUG等。</li>
+              <li>实习空余期间，也开始补充新的知识，如node等。</li>
+            </ul>
+          </div>
         </div>
-       </div>
-       <div class="other-mes">
-         <div class="other-mes-header">
+        <div class="other-mes">
+          <div class="other-mes-header">
             <span class="header-first">2018.03 - 2018.03</span>
-            <span class="header-middle"></span>
+            <span class="header-middle">闲暇间隙</span>
             <span class="header-last">web前端</span>
-         </div>
-         <div class="practice-steep-content">
-           <ul class="practice-steep">
-             <li>在闲暇期间，把之前对Node的向往之情，得到了实现，由于刚入坑这方面，app做的还比较粗糙，差不多就是搭通了下前后端，后期会进行功能的完善。</li>
-             <li>类似于论坛的app。</li>
-             <li>主要用了：vue，nodejs，nginx，mongodb等。(还有待后期更加深入的学习与实践)</li>
-             <li>主要步骤：前期的分析和构建，本地服务器的搭建，云服务器环境的配置，网站的部署。</li>
-             <li>感受：爬坑之旅，异常艰难，一个问题可以怼得你怀疑人生，不过反而激起了我的斗志。</li>
-           </ul>
-        </div>
-       </div>
-       <h4 class="mes-title">
-         <img src="images/campus.png"/>
-         <span>校内项目（Campus）</span>
-       </h4>
-       <div class="other-mes">
-         <div class="other-mes-header">
-            <span class="header-first">2016.03 - 2016.03</span>
-            <span class="header-middle">湖南科技大学逸夫楼</span>
-            <span class="header-last">web前端兼后台</span>
-         </div>
-         <div class="practice-steep-content">
-           <ul class="practice-steep">
-             <li>项目大体为一个完全仿qq的web实时聊天网页app。</li>
-             <li>主要用到的知识有:基本知识，jq，php，简易mysql以及wampserve。</li>
-             <li>主要模块：登录注册模块，会话列表，好友列表，以及空间客户端。</li>
-             <li>原理：通过不断的向数据库轮询取数据的方式来模拟在线聊天，后来通过websocket技术进行了改进（三次握手进行双向通信）。</li>
-           </ul>
+          </div>
+          <div class="practice-steep-content">
+            <ul class="practice-steep">
+              <li>在闲暇期间，把之前对Node的向往之情，得到了实现，由于刚入坑这方面，app做的还比较粗糙，差不多就是搭通了下前后端，后期会进行功能的完善。</li>
+              <li>类似于论坛的app。</li>
+              <li>主要用了：vue，nodejs，nginx，mongodb等。(还有待后期更加深入的学习与实践)</li>
+              <li>主要步骤：前期的分析和构建，本地服务器的搭建，云服务器环境的配置，网站的部署。</li>
+              <li>感受：爬坑之旅，异常艰难，一个问题可以怼得你怀疑人生，不过反而激起了我的斗志。</li>
+            </ul>
+          </div>
         </div>
         <h4 class="mes-title company-title">
-          <img src="images/company.png"/>
+          <img src="images/company.png" />
           <span>工作经历（Company）</span>
         </h4>
         <div class="other-mes">
           <div class="other-mes-header">
-             <span class="header-first">2018.06 - 2019.10</span>
-             <span class="header-middle">万汇互联科技有限公司</span>
-             <span class="header-last">web前端开发工程师</span>
+            <span class="header-first">2018.06 - 2019.10</span>
+            <span class="header-middle">万汇互联科技有限公司</span>
+            <span class="header-last">web前端开发工程师</span>
           </div>
           <div class="practice-steep-content">
             <ul class="practice-steep">
@@ -140,56 +143,95 @@
               <li>具体包括开发移动端各h5页面，与原生对接联调交互。根据移动端实际情况，对现有服务端渲染逻辑进行改造优化，
                 提升页面响应速度以及用户体验。实验现有缓存技术对资源加载进行优化。利用vue的相关特性，进行插件开发，项目重构。
               </li>
-              <li>利用相关框架，开发与现有业务相关联的一套代码多端小程序（微信小程序）。</li>
+              <li>一些平时用到的组件，如上拉加载，下拉刷新，axios等三方库的再次封装，toast等小部件的封装。</li>
+              <li>一些活动落地页的开发，以及利用elment-ui开发部分后台管理模块。</li>
+              <li>利用taro，开发与现有业务相关联的一套代码多端小程序（主打微信小程序）。
+                <ol class="child-ul">
+                  <li>包括：框架的选取，项目的搭建，前端各类逻辑的编写与实现，与后端对接各种微信api，各种微信权限验证获取，实现canvas动态生成用户卡片等全过程。</li>
+                  <li>项目地址：微信搜索《Followme测交易运势》</li>
+                </ol>
+              </li>
               <li>升级和改造现有pc主站老项目，vue项目业务组件化，typescript化，使之向后兼容，也便于开发管理，状态管理类化等项目改造。</li>
               <li>对于小工程模块，也会编写一些node端接口，自行对接前端。</li>
+              <li>上述项目地址：app请下载《Followme交易社区》，pc主站地址：<a href="https://www.followme.cn/">https://www.followme.cn</a></li>
             </ul>
-         </div> 
-       <h4 class="mes-title">
-        <img id="cursorily" src="images/cursorily.png"/>
-        <span>前端涉猎（Cursorily）</span>
-       </h4>
-       <div class="other-mes">
-         <div class="practice-steep-content">
-           <ul>
-             <li>
-               范围: 基本知识（html,css,js），JQ，vue，vue-ssr，typescript，react，微信小程序，node.js，git，webpack，rollup等。
-             </li>
-           </ul>
-       </div>
-       <h4 class="mes-title">
-        <img src="images/self.png"/>
-        <span>自我评价（Self-assessment）</span>
-       </h4>
-       <div class="other-mes">
-        <div class="other-mes-title"><span>前端经历：</span></div>
-          <p>
-             从大一下学期开始接触前端，也没大牛带，从w3c网，到红皮书，再到现在一只菜鸟，一路摸爬滚打，坐井观天时，就偷偷去翻别人的博客，贴吧，看下大神们的学习历程。我希望能有个温暖的前端大家庭收留。
-           </p>
-         <div class="other-mes-title"><span>专业评价：</span></div>
-           <p>
-             有良好的编码风格，能编写高质量代码，能解决浏览器兼容问题，能编写移动端适配代码，能很好的利用前端各类框架。
-           </p>
-         <div class="other-mes-title1"><span>其他评价：</span></div>
-           <p>
-             具有良好的数学和计算机基础知识，较强的数理分析、逻辑推理和再学习能力。
-             自学能力强，解决问题效率高。
-             积极进取，勇于挑战，为人热情可靠，工作勤奋刻苦，有出色的团队意识，抗压能力和强烈的责任感。
-           </p>
-       </div>
-    <div class="blog">
-      <span>github：</span><span><a href="https://github.com/Vitaminaq">https://github.com/Vitaminaq</a> </span>
-    </div>
-    <div class="blog">
-      <span>技术博客：</span><span><a href="http://blog.csdn.net/theoneemperor?viewmode=list">http://blog.csdn.net/theoneemperor?viewmode=list</a> </span>
-    </div>
-    <div class="blog" class="footer">
-      <span>简历在线浏览：</span><span><a href="https://vitaminaq.github.io/my-cv">https://vitaminaq.github.io/my-cv</a> </span>
-    </div>
-    <div class="blog" class="footer">
-      本简历pc端，手机端兼容
-    </div>
-  </div>
-  <script type="text/javascript" src="index.js"></script>
+          </div>
+          <div class="other-mes">
+            <div class="other-mes-header">
+              <span class="header-first">2019.06 - 2019.10</span>
+              <span class="header-middle">闲暇间隙</span>
+              <span class="header-last">web前端</span>
+            </div>
+            <div class="practice-steep-content">
+              <ul class="practice-steep">
+                <li>闲暇空隙，采用rollup打包工具，开发了一点平时用到的vue插件。</li>
+                <li>vue-rescroll：全局滚动状态还原指令化管理。<a
+                    href="https://www.npmjs.com/package/vue-rescroll">https://www.npmjs.com/package/vue-rescroll</a>
+                </li>
+                <li>vue-images-lazy-load：图片懒加载指令化。<a
+                    href="https://www.npmjs.com/package/vue-images-lazy-load">https://www.npmjs.com/package/vue-images-lazy-load</a>
+                </li>
+                <li>vue-lazy-store：一个简易版的vue状态管理包，支持完全体typescript。<a
+                    href="https://www.npmjs.com/package/vue-lazy-store">https://www.npmjs.com/package/vue-lazy-store</a>
+                </li>
+              </ul>
+              <ul class="practice-steep-two">
+                <li>在flutter 1.0正式发布的时候，也是蹭了把热度，搞了下flutter。</li>
+                <li>
+                  项目就是把之前自学做的那个论坛类app用dart语法去重构几个页面，向flutter-plugin库提交了webview安卓开启debug模式的代码，由于签署谷歌开发者协议耽误了时间，在那短短的半天时间已经被修复，并没有被采纳，蹭热度失败。
+                </li>
+              </ul>
+            </div>
+          </div>
+          <h4 class="mes-title">
+            <img id="cursorily" src="images/cursorily.png" />
+            <span>前端涉猎（Cursorily）</span>
+          </h4>
+          <div class="other-mes">
+            <div class="practice-steep-content">
+              <ul>
+                <li>
+                  范围: 基本知识（html,css,js），JQ，vue，vue-ssr，typescript，react，微信小程序，node.js，git，webpack，rollup，flutter等。
+                </li>
+              </ul>
+            </div>
+            <h4 class="mes-title">
+              <img src="images/self.png" />
+              <span>自我评价（Self-assessment）</span>
+            </h4>
+            <div class="other-mes">
+              <div class="other-mes-title"><span>前端经历：</span></div>
+              <p>
+                从大一下学期开始接触前端，也没大牛带，从w3c网，到红皮书，再到现在一只菜鸟，一路摸爬滚打，坐井观天时，就偷偷去翻别人的博客，贴吧，看下大神们的学习历程。我希望能有个温暖的前端大家庭收留。
+              </p>
+              <div class="other-mes-title"><span>专业评价：</span></div>
+              <p>
+                有良好的编码风格，能编写高质量代码，能解决浏览器兼容问题，能编写移动端适配代码，能很好的利用前端各类框架。
+              </p>
+              <div class="other-mes-title1"><span>其他评价：</span></div>
+              <p>
+                具有良好的数学和计算机基础知识，较强的数理分析、逻辑推理和再学习能力。
+                自学能力强，解决问题效率高。
+                积极进取，勇于挑战，为人热情可靠，工作勤奋刻苦，有出色的团队意识，抗压能力和强烈的责任感。
+              </p>
+            </div>
+            <div class="blog">
+              <span>github：</span><span><a href="https://github.com/Vitaminaq">https://github.com/Vitaminaq</a> </span>
+            </div>
+            <div class="blog">
+              <span>技术博客：</span><span><a
+                  href="http://blog.csdn.net/theoneemperor?viewmode=list">http://blog.csdn.net/theoneemperor?viewmode=list</a>
+              </span>
+            </div>
+            <div class="blog" class="footer">
+              <span>简历在线浏览：</span><span><a
+                  href="https://vitaminaq.github.io/my-cv">https://vitaminaq.github.io/my-cv</a> </span>
+            </div>
+            <div class="blog" class="footer">
+              本简历pc端，手机端兼容
+            </div>
+          </div>
+          <script type="text/javascript" src="index.js"></script>
 </body>
+
 </html>
