--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <li><span>毕业学校：</span><span>湖南科技大学</span></li>
           <li class="mes-left"><span>住 址：</span><span>广东省深圳市宝安区</span></li>
           <li><span>学 历：</span><span>本科</span></li>
-          <li class="mes-left"><span>工作经验：</span><span>一年半</span></li>
+          <li class="mes-left"><span>工作经验：</span><span>两年</span></li>
         </ul>
         <div id="photo">
           <img src="images/tx.jpg" />
@@ -140,7 +140,7 @@
           <div class="practice-steep-content">
             <ul class="practice-steep">
               <li>主要从事原生h5混合项目开发，负责h5与原生的对接与优化工作。</li>
-              <li>具体包括开发移动端各h5页面，与原生对接联调交互。根据移动端实际情况，对现有服务端渲染逻辑进行改造优化，
+              <li>具体包括开发移动端各h5业务逻辑页面，与原生对接联调交互，版本的迭代，pc主站版本迭代。根据移动端实际情况，对现有服务端渲染逻辑进行改造优化，
                 提升页面响应速度以及用户体验。实验现有缓存技术对资源加载进行优化。利用vue的相关特性，进行插件开发，项目重构。
               </li>
               <li>一些平时用到的组件，如上拉加载，下拉刷新，axios等三方库的再次封装，toast等小部件的封装。</li>
@@ -174,11 +174,28 @@
                 <li>vue-lazy-store：一个简易版的vue状态管理包，支持完全体typescript。<a
                     href="https://www.npmjs.com/package/vue-lazy-store">https://www.npmjs.com/package/vue-lazy-store</a>
                 </li>
+                <li>vue-pupop-toast：包括confirm，alert，loading，toast等常见的ui插件，支持ts，以及ts提示。<a
+                  href="https://www.npmjs.com/package/vue-pupop-toast">https://www.npmjs.com/package/vue-pupop-toast</a>
+              </li>
               </ul>
               <ul class="practice-steep-two">
                 <li>在flutter 1.0正式发布的时候，也是蹭了把热度，搞了下flutter。</li>
                 <li>
                   项目就是把之前自学做的那个论坛类app用dart语法去重构几个页面，向flutter-plugin库提交了webview安卓开启debug模式的代码，由于签署谷歌开发者协议耽误了时间，在那短短的半天时间已经被修复，并没有被采纳，蹭热度失败。
+                </li>
+              </ul>
+              <ul class="practice-steep-two">
+                <li>在flutter 1.0正式发布的时候，也是蹭了把热度，搞了下flutter。</li>
+                <li>
+                  项目就是把之前自学做的那个论坛类app用dart语法去重构几个页面，向flutter-plugin库提交了webview安卓开启debug模式的代码，由于签署谷歌开发者协议耽误了时间，在那短短的半天时间已经被修复，并没有被采纳，蹭热度失败。
+                </li>
+              </ul>
+              <ul class="practice-steep-two">
+                <li>用各种技术把之前的项目重构了部分，只是用于技术实践，算不上项目，后台node项目也采用了node+mysql重构了一部分。</li>
+                <li>主要用于当前热门技术实践，比如ssr改造，模块化，缓存优化，typescript化等等。</li>
+                <li>
+                  在线地址：<a
+                  href="http://129.28.167.2/blog/home">http://129.28.167.2/blog/home</a>
                 </li>
               </ul>
             </div>
@@ -191,8 +208,9 @@
             <div class="practice-steep-content">
               <ul>
                 <li>
-                  范围: 基本知识（html,css,js），JQ，vue，vue-ssr，typescript，react，微信小程序，node.js，git，webpack，rollup，flutter等。
+                  前端: 基本知识（html,css,js），JQ，vue，vue-ssr，typescript，react，react-next，微信小程序，git，webpack，rollup，flutter等。
                 </li>
+                <li>后端部分：node.js，mysql，mongodb，一些基础的nginx转发，IIS搭建。</li>
               </ul>
             </div>
             <h4 class="mes-title">
@@ -202,7 +220,7 @@
             <div class="other-mes">
               <div class="other-mes-title"><span>前端经历：</span></div>
               <p>
-                从大一下学期开始接触前端，也没大牛带，从w3c网，到红皮书，再到现在一只菜鸟，一路摸爬滚打，坐井观天时，就偷偷去翻别人的博客，贴吧，看下大神们的学习历程。我希望能有个温暖的前端大家庭收留。
+                从大一下学期开始接触前端，也没大牛带，从w3c网，到红皮书，再到现在一只菜鸟，一路摸爬滚打，坐井观天时，就偷偷去翻别人的博客，贴吧，看下大神们的学习历程。
               </p>
               <div class="other-mes-title"><span>专业评价：</span></div>
               <p>
