--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
           <li class="mes-left"><span>民 族：</span><span>汉</span></li>
           <li><span>身 高：</span><span>172cm</span></li>
           <li class="mes-left"><span>电 话：</span><span>13638422132</span></li>
-          <li><span>政治面貌：</span><span>中共团员</span></li>
+          <li><span>政治面貌：</span><span>共青团员</span></li>
           <li class="mes-left"><span>邮 箱：</span><span>1109614355@qq.com</span></li>
           <li><span>毕业学校：</span><span>湖南科技大学</span></li>
           <li class="mes-left"><span>住 址：</span><span>广东省深圳市宝安区</span></li>
-          <li><span>学 历：</span><span>本科</span></li>
-          <li class="mes-left"><span>工作经验：</span><span>两年</span></li>
+          <li><span>学 历：</span><span>全日制本科</span></li>
+          <li class="mes-left"><span>工作经验：</span><span>两年以上</span></li>
         </ul>
         <div id="photo">
           <img src="images/tx.jpg" />
@@ -72,7 +72,7 @@
             <li>项目大体为一个完全仿qq的web实时聊天网页app。</li>
             <li>主要用到的知识有:基本知识，jq，php，简易mysql以及wampserve。</li>
             <li>主要模块：登录注册模块，会话列表，好友列表，以及空间客户端。</li>
-            <li>原理：通过不断的向数据库轮询取数据的方式来模拟在线聊天，后来通过websocket技术进行了改进（三次握手进行双向通信）。</li>
+            <li>原理：通过不断的向数据库轮询取数据的方式来模拟在线聊天，后来通过websocket技术进行了改进。</li>
           </ul>
         </div>
         <h4 class="mes-title">
@@ -106,7 +106,7 @@
             <ul class="practice-steep">
               <li>主要参与一些PC端系统的开发。</li>
               <li>在此期间，是非常快上手项目的实习生，也分担了大型系统构建的任务。</li>
-              <li>主要负责方面：开发前期配置文件的编写，界面的构建，大型文件树结构的构建（如：多级文件树的增删改查，以及预览上传等），参与过界面的调整讨论，JQ框架Easyui的使用，以及修改他人代码的BUG等。</li>
+              <li>主要负责方面：开发前期配置文件的编写，界面的构建，大型文件树结构的构建（如：多级文件树的增删改查，以及预览上传等），参与界面的调整讨论，JQ框架Easyui的使用，以及修改他人代码的BUG等。</li>
               <li>实习空余期间，也开始补充新的知识，如node等。</li>
             </ul>
           </div>
@@ -114,16 +114,16 @@
         <div class="other-mes">
           <div class="other-mes-header">
             <span class="header-first">2018.03 - 2018.03</span>
-            <span class="header-middle">闲暇间隙</span>
+            <span class="header-middle"></span>
             <span class="header-last">web前端</span>
           </div>
           <div class="practice-steep-content">
             <ul class="practice-steep">
-              <li>在闲暇期间，把之前对Node的向往之情，得到了实现，由于刚入坑这方面，app做的还比较粗糙，差不多就是搭通了下前后端，后期会进行功能的完善。</li>
+              <li>目的：对之前实习所学知识的再实践，主要包括vue，代码封装，实践node知识，以及服务器搭建</li>
               <li>类似于论坛的app。</li>
-              <li>主要用了：vue，nodejs，nginx，mongodb等。(还有待后期更加深入的学习与实践)</li>
-              <li>主要步骤：前期的分析和构建，本地服务器的搭建，云服务器环境的配置，网站的部署。</li>
-              <li>感受：爬坑之旅，异常艰难，一个问题可以怼得你怀疑人生，不过反而激起了我的斗志。</li>
+              <li>主要用了：vue，nodejs，nginx，mongodb等。(浅层知识))</li>
+              <li>主要步骤：前期的分析和构建，脚手架的熟悉，项目的搭建，跨域配置，本地以及云服务器的搭建和部署。</li>
+              <li>感受：初步爬坑，一个问题可以卡到怀疑人生，幸好还是解决了。</li>
             </ul>
           </div>
         </div>
@@ -139,19 +139,30 @@
           </div>
           <div class="practice-steep-content">
             <ul class="practice-steep">
-              <li>主要从事原生h5混合项目开发，负责h5与原生的对接与优化工作。</li>
-              <li>具体包括开发移动端各h5业务逻辑页面，与原生对接联调交互，版本的迭代，pc主站版本迭代。根据移动端实际情况，对现有服务端渲染逻辑进行改造优化，
-                提升页面响应速度以及用户体验。实验现有缓存技术对资源加载进行优化。利用vue的相关特性，进行插件开发，项目重构。
+              <li>主要从事原生h5混合项目开发，pc主站的维护和迭代，以及相关架构调整和优化。</li>
+              <li>混合开发
+                <ol class="child-ul">
+                  <li>正常的产品迭代，以及日常维护，基础库的维护。</li>
+                  <li>项目重构：整个小组成员在不项目延期的情况下对老项目进行了多次面目全非的改动，比如升级ts，文件分类资源按需加载，页面模块化等。</li>
+                  <li>项目优化：修复老项目一些逻辑缺陷，重新分析资源的引入，降低入口文件大小，惰性加载，
+                    根据不同项目实际情况对ssr逻辑的重构（页面响应效果差不多提升了一两倍），以及一些资源的缓存。与原生联调对webview的优化。</li>
+                  <li>对第三方库的再封装，一些浏览器稀有api的研究，以及常用的vue组件的封装和插件的发布， 如：上拉加载，
+                    下拉刷新，axios等三方库的再次封装，toast等小部件的封装。</li>
+                </ol>
               </li>
-              <li>一些平时用到的组件，如上拉加载，下拉刷新，axios等三方库的再次封装，toast等小部件的封装。</li>
-              <li>一些活动落地页的开发，以及利用elment-ui开发部分后台管理模块。</li>
+              <li>PC主站
+                  <ol class="child-ul">
+                    <li>pc主站比较庞大，分成了很多个子项目，主要负责产品迭代，组件库维护，老逻辑的优化以及架构升级。</li>
+                    <li>对原有首页项目使用了ts+prettier等重构，逐步把代码迁移至新模式和对老代码瘦身，对其webpack 4.0以下的项目进行升级接入ts。</li>
+                  </ol>
+                </li>
+              <li>一些活动落地页的开发，以及开发部分后台管理模块。</li>
               <li>利用taro，开发与现有业务相关联的一套代码多端小程序（主打微信小程序）。
                 <ol class="child-ul">
-                  <li>包括：框架的选取，项目的搭建，前端各类逻辑的编写与实现，与后端对接各种微信api，各种微信权限验证获取，实现canvas动态生成用户卡片等全过程。</li>
+                  <li>包括：框架的调研，项目的搭建，前端各类逻辑的编写与实现，与后端对接协商api，各种微信权限验证获取，实现canvas动态生成用户卡片等全过程。</li>
                   <li>项目地址：微信搜索《Followme测交易运势》</li>
                 </ol>
               </li>
-              <li>升级和改造现有pc主站老项目，vue项目业务组件化，typescript化，使之向后兼容，也便于开发管理，状态管理类化等项目改造。</li>
               <li>对于小工程模块，也会编写一些node端接口，自行对接前端。</li>
               <li>上述项目地址：app请下载《Followme交易社区》，pc主站地址：<a href="https://www.followme.cn/">https://www.followme.cn</a></li>
             </ul>
@@ -159,7 +170,7 @@
           <div class="other-mes">
             <div class="other-mes-header">
               <span class="header-first">2019.06 - 2019.10</span>
-              <span class="header-middle">闲暇间隙</span>
+              <span class="header-middle"></span>
               <span class="header-last">web前端</span>
             </div>
             <div class="practice-steep-content">
@@ -191,8 +202,11 @@
                 </li>
               </ul>
               <ul class="practice-steep-two">
-                <li>用各种技术把之前的项目重构了部分，只是用于技术实践，算不上项目，后台node项目也采用了node+mysql重构了一部分。</li>
-                <li>主要用于当前热门技术实践，比如ssr改造，模块化，缓存优化，typescript化等等。</li>
+                <li>平时会利用老项目的一些页面做一些技术实践，后台node也采用了node+mysql重构。</li>
+                <li>主要用于当前热门技术实践，比如ssr改造，模块化，缓存优化，ts化等等。</li>
+                <li>github:<a
+                  href="https://github.com/Vitaminaq/cfsw-vue-cli3.0/tree/ssr-no-prefetch-modules">
+                  https://github.com/Vitaminaq/cfsw-vue-cli3.0/tree/ssr-no-prefetch-modules</a></li>
                 <li>
                   在线地址：<a
                   href="http://129.28.167.2/blog/home">http://129.28.167.2/blog/home</a>
