--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
         <div class="other-mes-header">
           <span class="header-first">2016.03 - 2016.03</span>
           <span class="header-middle">湖南科技大学逸夫楼</span>
-          <span class="header-last">web前端兼后台</span>
+          <span class="header-last"></span>
         </div>
         <div class="practice-steep-content">
           <ul class="practice-steep">
             <li>项目大体为一个完全仿qq的web实时聊天网页app。</li>
-            <li>主要用到的知识有:基本知识，jq，php，简易mysql以及wampserve。</li>
+            <li>主要用到的:基本知识，jq，php，简易mysql以及wampserve。</li>
             <li>主要模块：登录注册模块，会话列表，好友列表，以及空间客户端。</li>
             <li>原理：通过不断的向数据库轮询取数据的方式来模拟在线聊天，后来通过websocket技术进行了改进。</li>
           </ul>
@@ -142,12 +142,12 @@
               <li>主要从事原生h5混合项目开发，pc主站的维护和迭代，以及相关架构调整和优化。</li>
               <li>混合开发
                 <ol class="child-ul">
-                  <li>正常的产品迭代，以及日常维护，基础库的维护。</li>
+                  <li>正常的产品迭代，以及日常维护，基础库的维护。目前h5在这个hybrid app中占据近50%的比例，囊括了很多流量大的页面。</li>
                   <li>项目重构：整个小组成员在不项目延期的情况下对老项目进行了多次面目全非的改动，比如升级ts，文件分类资源按需加载，页面模块化等。</li>
                   <li>项目优化：修复老项目一些逻辑缺陷，重新分析资源的引入，降低入口文件大小，惰性加载，
                     根据不同项目实际情况对ssr逻辑的重构（页面响应效果差不多提升了一两倍），以及一些资源的缓存。与原生联调对webview的优化。</li>
                   <li>对第三方库的再封装，一些浏览器稀有api的研究，以及常用的vue组件的封装和插件的发布， 如：上拉加载，
-                    下拉刷新，axios等三方库的再次封装，toast等小部件的封装。</li>
+                    下拉刷新，axios等三方库的再次封装，toast等常见组件的封装。</li>
                 </ol>
               </li>
               <li>PC主站
